Refine APIs